--- a/index.html
+++ b/index.html
@@ -2,31 +2,42 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz,wght@16..144,100..700&display=swap"
+        rel="stylesheet">
+
+
+    <link rel="stylesheet" href="style.css" <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jardim Leviatâ</title>
 </head>
 
 <body>
 
-<main>
-     <div class="passo" id="inicial">
- <p>Em um clima temperado da tarde, uma grande chuva começou a despencar sobre o teto, e você na sua sala de estar olhou sobre a janela. Tudo estava normal na rua, porém quando tirou os olhos da janela, toda sua sala era um grande jardim. O sul rodeado por papoulas azuis, e a do norte de lírios vermelhos. Você decidi seguir por um caminho.</p>
- 
- <botton class="proximo-bt" data-caminho="1">Ir para o Norte</botton>
- <botton class="proximo-bt" data-caminho="2">Ir para o Sul</botton>
+    <main>
+        <div class="passo" id="inicial">
+            <p>Em um clima temperado da tarde, uma grande chuva começou a despencar sobre o teto, e você na sua sala de
+                estar olhou sobre a janela. Tudo estava normal na rua, porém quando tirou os olhos da janela, toda sua
+                sala era um grande jardim. O sul rodeado por papoulas azuis, e a do norte de lírios vermelhos. Você
+                decidi seguir por um caminho.</p>
 
-     </div>
+            <button class="proximo-bt" data-caminho="1">Ir para o Norte</button>
+            <button class="proximo-bt" data-caminho="2">Ir para o Sul</button>
 
-     <div class="passo" id="Norte-1">
-        <p>Afundando seus pés pelas bufantes flores vermelhas, morros de flores enroladas a pilastras se revelam. E junto a um calor escandalte na sua pele, você fica em frente um palácuo abandonado. O que você faz?</p>
-        
-        <botton class="proximo-bt" data-caminho="1">Entrar pelo portão quebrado</botton>
-        <botton class="proximo-bt" data-caminho="2">voltar por onde veio</botton>
-       
-            </div>
+        </div>
 
-        </main>
+        <div class="passo" id="Norte-1">
+            <p>Afundando seus pés pelas bufantes flores vermelhas, morros de flores enroladas a pilastras se revelam. E
+                junto a um calor escandalte na sua pele, você fica em frente um palácuo abandonado. O que você faz?</p>
+
+            <button class="proximo-bt" data-caminho="3">Entrar pelo portão quebrado</button>
+            <button class="proximo-bt" data-caminho="4">voltar por onde veio</button>
+
+        </div>
+
+    </main>
 
 
 </body>
