--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <main>
-        <div class="passo" id="inicial">
+        <div class="passo ativo" id="inicial">
             <p>Em um clima temperado da tarde, uma grande chuva começou a despencar sobre o teto, e você na sua sala de
                 estar olhou sobre a janela. Tudo estava normal na rua, porém quando tirou os olhos da janela, toda sua
                 sala era um grande jardim. O sul rodeado por papoulas azuis, e a do norte de lírios vermelhos. Você
