--- a/index.html
+++ b/index.html
@@ -15,32 +15,23 @@
 </head>
 
 <body>
-
     <main>
-        <div class="passo ativo" id="inicial">
+        <div class="passo ativo" id="passo-0">
+            <img src="kari-gurashi-no-arietti-animated-movies-anime-animation-film-stills-Studio-Ghibli-2240152-wallhere.com.jpg" alt="">
             <p>Em um clima temperado da tarde, uma grande chuva começou a despencar sobre o teto, e você na sua sala de
                 estar olhou sobre a janela. Tudo estava normal na rua, porém quando tirou os olhos da janela, toda sua
                 sala era um grande jardim. O sul rodeado por papoulas azuis, e a do norte de lírios vermelhos. Você
                 decidi seguir por um caminho.</p>
-
-            <button class="proximo-bt" data-caminho="1">Ir para o Norte</button>
-            <button class="proximo-bt" data-caminho="2">Ir para o Sul</button>
-
+            <button class="btn-proximo" data-proximo="1">Norte</button>
+            <button class="btn-proximo" data-proximo="2">Sul</button>
         </div>
-
-        <div class="passo" id="Norte-1">
+        <div class="passo" id="passo-1">
             <p>Afundando seus pés pelas bufantes flores vermelhas, morros de flores enroladas a pilastras se revelam. E
-                junto a um calor escandalte na sua pele, você fica em frente um palácuo abandonado. O que você faz?</p>
-
-            <button class="proximo-bt" data-caminho="3">Entrar pelo portão quebrado</button>
-            <button class="proximo-bt" data-caminho="4">voltar por onde veio</button>
-
+                junto a um calor escandalte na sua pele, você fica em frente um palácio abandonado. O que você faz?</p>
+            <button class="btn-proximo" data-proximo="3">Adentrar pelo portão quebrado</button>
+            <button class="btn-proximo" data-proximo="4">Retornar o caminho ainda fresco</button>
         </div>
-
     </main>
-
-
+    <script src="script.js"></script>
 </body>
-
-
 </html>
