--- a/index.html
+++ b/index.html
@@ -31,6 +31,56 @@
             <button class="btn-proximo" data-proximo="3">Adentrar pelo portão quebrado</button>
             <button class="btn-proximo" data-proximo="4">Retornar o caminho ainda fresco</button>
         </div>
+
+        <div class="passo" id="passo-2">
+            <p>Com um ar gélido, as papoulas voavam pelo ar até tomar toda sua visão. Seus olhos fecham pelo vento, e quando os abre enexerga um corredor de árvores e flores azuladas.</p>
+            <button class="btn-proximo" data-proximo="5">Seguir o caminho do corredor azul</button>
+            <button class="btn-proximo" data-proximo="6">Dar meia volta, enquanto o vento enfraqueceu</button>
+        </div>
+
+        <div class="passo" id="passo-3">
+            <p>Pisando sobre pedaços grossos de madeira e metal, você passa pelos destroçoes e vê um grande salão, invadido pela flora. Com dois corredores bem a sua vista, o da direita, com espadas cinzas esplhadas por todo o corredor, e o da esquerda, com livros rasgados pelo caminho</p>
+            <button class="btn-proximo" data-proximo="7">Ir a armaria Carmim a direita</button>
+            <button class="btn-proximo" data-proximo="8">ir a biblioteca de Rosas</button>
+
+        </div>
+
+        <div class="passo" id="passo-4">
+            <p>Com o calor ainda sob a pele, voltou o caminho, derramando gotas de suor, e quando percebeu, estava de volta a sua sala de estar. A chuva ainda continuava. </p>
+            
+        </div>
+
+        <div class="passo" id="passo-5">
+            <p>Avançando pelo corredor, uma clareira, iluminada por um campo de batalha vazio se mostrava. Com diversas lanças à espadas fincadas como um cêmiterio silencioso. Afundando pelo campo, um rugido longicuo se desloca pelo vento, e você se apoia em uma:</p>
+            <button class="btn-proximo" data-proximo="9">Lança torta</button>
+            <button class="btn-proximo" data-proximo="12">Espada enferrujada</button>
+
+        </div>
+
+        <div class="passo" id="passo-6">
+            <p> Com o corpo trêmulo, você dá a volta, e começa a voltaar, o vento batendo a seu rosto até suas sombrancelhas ficarem brancas de gelo fino. Os olhos se fecharam, e quando o vento sumiu, os abriu. Sua sala de estar estava em sua frente, como a chuva mais forte do que antes</p>
+            
+        </div>
+
+        <div class="passo" id="passo-7">
+            <p>  Sobre as espadas cinzas, o resto da armaria estava quase toda consumida por rosas vermelhas. Tirando uma estante, a qual repousava uma grande espada curva, com uma cor de vermelho sangue.</p>
+            <button class="btn-proximo" data-proximo="13"></button>
+            <button class="btn-proximo" data-proximo="14"></button>
+
+        </div>
+
+
+
+
+
+
+
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
+            <button class="btn-proximo" data-proximo="4">Retornar o caminho ainda fresco</button>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
